syntax = "proto3";

option csharp_namespace = "AntRadioGrpcService";

package AntRadioPackage;

// The ANT radio service
service AntRadio {
	rpc GetProperties (PropertiesRequest) returns (PropertiesReply);
	rpc InitializeContinuousScanMode (InitScanModeRequest) returns (InitScanModeReply);
}

message PropertiesRequest {}
message PropertiesReply {
	string ProductDescription = 1;
	string SerialString = 2;
	string HostVersion = 3;
}

message InitScanModeRequest {}
message InitScanModeReply {
	int32 NumChannels = 1;
}
